src/objects/Plan__c.object
<CustomObject>
    <description>A plan developed by the individual to meet certain goals.</description>
    <fields>
        <fullName>Assisted_Individual__c</fullName>
        <formula>Case__r.Referral__r.Individual_First_Name__c &amp; &quot; &quot; &amp;  Case__r.Referral__r.Individual_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assisted Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <description>Case Owner</description>
        <formula>Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>TEXT( DAY( Case__r.Contact.Birthdate )) &amp; &quot;/&quot; &amp; TEXT( MONTH(Case__r.Contact.Birthdate))  &amp; &quot;/&quot; &amp; TEXT(YEAR(Case__r.Contact.Birthdate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Meeting_Date__c</fullName>
        <label>First Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_meeting__c</fullName>
        <formula>TEXT(DAY( First_Meeting_Date__c )) &amp; &quot;/&quot; &amp; Text(MONTH( First_Meeting_Date__c )) &amp; &quot;/&quot; &amp;  TEXT(YEAR( First_Meeting_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ONLY_ONE_PLAN_PER_PERSON_ALLOWED__c</fullName>
        <description>ONLY ONE &quot;SUPPORT PLAN&quot; PER PERSON ALLOWED</description>
        <label>ONLY 1 &quot;SUPPORT PLAN&quot; PER PERSON ALLOWED</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Description__c</fullName>
        <encrypted>true</encrypted>
        <label>Plan Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Place/ Signed-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Support Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Case_Plan__c</fullName>
        <description>Unique Case Plan</description>
        <inlineHelpText>Unique Case Plan</inlineHelpText>
        <label>Unique Case Plan</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encrypted>true</encrypted>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>true</active>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Owner_and_Internal_can_Edit</fullName>
        <active>true</active>
        <description>Only the record creator or a System Administrator can edit this record.</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Director&quot;,
$Profile.Name &lt;&gt; &quot;STADD Navigator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;, 
CreatedById &lt;&gt; $User.Id,
Case__r.Owner:User.Id &lt;&gt; $User.Id     
)</errorConditionFormula>
        <errorMessage>Only the record creator or a System Administrator can edit this record.</errorMessage>
    </validationRules>
</CustomObject>